--- a/PCM.SIP.ICP.SEG.Transversal.Common/PCM.SIP.ICP.SEG.Transversal.Common.csproj
+++ b/PCM.SIP.ICP.SEG.Transversal.Common/PCM.SIP.ICP.SEG.Transversal.Common.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Util\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.5.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
