Feat: implementacion del proyecto Transversal.Logging

--- a/PCM.SIP.ICP.SEG.Transversal.Logging/PCM.SIP.ICP.SEG.Transversal.Logging.csproj
+++ b/PCM.SIP.ICP.SEG.Transversal.Logging/PCM.SIP.ICP.SEG.Transversal.Logging.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Transversal.Common\PCM.SIP.ICP.SEG.Transversal.Common.csproj" />
+  </ItemGroup>
+
 </Project>
