Feat: Implementacion de proyecto Persistence.Repository, Applicacion.Interface, Persistence, Transversal.Util

--- a/PCM.SIP.ICP.SEG.Api/appsettings.json
+++ b/PCM.SIP.ICP.SEG.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IcpConnection": "server=localhost; database=pcm_icp_seg; User Id=sa; Password=sistemas*; trustServerCertificate=true;"
+  }
 }
