--- a/PCM.SIP.ICP.SEG.Aplicacion.Interface/PCM.SIP.ICP.SEG.Aplicacion.Interface.csproj
+++ b/PCM.SIP.ICP.SEG.Aplicacion.Interface/PCM.SIP.ICP.SEG.Aplicacion.Interface.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Dto\PCM.SIP.ICP.SEG.Aplicacion.Dto.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Transversal.Common\PCM.SIP.ICP.SEG.Transversal.Common.csproj" />
+  </ItemGroup>
+
 </Project>
