--- a/PCM.SIP.ICP.SEG.Persistence/PCM.SIP.ICP.SEG.Persistence.csproj
+++ b/PCM.SIP.ICP.SEG.Persistence/PCM.SIP.ICP.SEG.Persistence.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Interface\PCM.SIP.ICP.SEG.Aplicacion.Interface.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Transversal.Common\PCM.SIP.ICP.SEG.Transversal.Common.csproj" />
+  </ItemGroup>
+
 </Project>
