--- a/PCM.SIP.ICP.SEG.Transversal.Common/PCM.SIP.ICP.SEG.Transversal.Common.csproj
+++ b/PCM.SIP.ICP.SEG.Transversal.Common/PCM.SIP.ICP.SEG.Transversal.Common.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Domain\PCM.SIP.ICP.SEG.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
