--- a/PCM.SIP.ICP.SEG.Transversal.Mapper/PCM.SIP.ICP.SEG.Transversal.Mapper.csproj
+++ b/PCM.SIP.ICP.SEG.Transversal.Mapper/PCM.SIP.ICP.SEG.Transversal.Mapper.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Dto\PCM.SIP.ICP.SEG.Aplicacion.Dto.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Domain\PCM.SIP.ICP.SEG.Domain.csproj" />
   </ItemGroup>
 
 </Project>
