Feat: Implement Validator project

--- a/PCM.SIP.ICP.SEG.Api/appsettings.json
+++ b/PCM.SIP.ICP.SEG.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IcpConnection": "server=localhost; database=pcm_icp_seg; User Id=sa; Password=sistemas*; trustServerCertificate=true;"
+    "IcpConnection": "server=localhost; database=pcm_icp_seg; User Id=sa; Password=sistemas; trustServerCertificate=true;"
   }
 }
