--- a/PCM.SIP.ICP.SEG.Aplicacion.Validator/PCM.SIP.ICP.SEG.Aplicacion.Validator.csproj
+++ b/PCM.SIP.ICP.SEG.Aplicacion.Validator/PCM.SIP.ICP.SEG.Aplicacion.Validator.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.5.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Dto\PCM.SIP.ICP.SEG.Aplicacion.Dto.csproj" />
+  </ItemGroup>
+
 </Project>
