--- a/PCM.SIP.ICP.SEG.Aplicacion.Features/PCM.SIP.ICP.SEG.Aplicacion.Features.csproj
+++ b/PCM.SIP.ICP.SEG.Aplicacion.Features/PCM.SIP.ICP.SEG.Aplicacion.Features.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Dto\PCM.SIP.ICP.SEG.Aplicacion.Dto.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Interface\PCM.SIP.ICP.SEG.Aplicacion.Interface.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Validator\PCM.SIP.ICP.SEG.Aplicacion.Validator.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Domain\PCM.SIP.ICP.SEG.Domain.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Transversal.Common\PCM.SIP.ICP.SEG.Transversal.Common.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.Transversal.Util\PCM.SIP.ICP.Transversal.Util.csproj" />
+  </ItemGroup>
+
 </Project>
