Feat: Implement api

--- a/PCM.SIP.ICP.SEG.Api/appsettings.json
+++ b/PCM.SIP.ICP.SEG.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "IcpConnection": "server=localhost; database=pcm_icp_seg; User Id=sa; Password=sistemas; trustServerCertificate=true;"
+  },
+  "Config": {
+    "OriginCors": "http://localhost:4200/",
+    "Secret": "+_)(*&^%$#@!)(JJGGG$$##+____*",
+    "Issuer": "SEIDOR.SGS.com",
+    "Audience": "SEIDOR.SGS.com"
   }
 }
