--- a/PCM.SIP.ICP.SEG.Api/PCM.SIP.ICP.SEG.Api.csproj
+++ b/PCM.SIP.ICP.SEG.Api/PCM.SIP.ICP.SEG.Api.csproj
@@ -7,8 +7,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.18" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Dto\PCM.SIP.ICP.SEG.Aplicacion.Dto.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Features\PCM.SIP.ICP.SEG.Aplicacion.Features.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Interface\PCM.SIP.ICP.SEG.Aplicacion.Interface.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Validator\PCM.SIP.ICP.SEG.Aplicacion.Validator.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Domain\PCM.SIP.ICP.SEG.Domain.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Infraestructure\PCM.SIP.ICP.SEG.Infraestructure.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Persistence\PCM.SIP.ICP.SEG.Persistence.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Transversal.Common\PCM.SIP.ICP.SEG.Transversal.Common.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Transversal.Logging\PCM.SIP.ICP.SEG.Transversal.Logging.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Transversal.Mapper\PCM.SIP.ICP.SEG.Transversal.Mapper.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.Transversal.Util\PCM.SIP.ICP.Transversal.Util.csproj" />
   </ItemGroup>
 
 </Project>
