Feat: Implements Redis in Infraestructure project

--- a/PCM.SIP.ICP.SEG.Api/appsettings.json
+++ b/PCM.SIP.ICP.SEG.Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IcpConnection": "server=localhost; database=pcm_icp_seg; User Id=sa; Password=sistemas; trustServerCertificate=true;"
+    "IcpConnection": "server=localhost; database=pcm_icp_seg; User Id=sa; Password=sistemas; trustServerCertificate=true;",
+    "RedisConnection": "127.0.0.1:6379,user=default,password=123456,ssl=False,abortConnect=False"
   },
   "Config": {
     "OriginCors": "http://localhost:4200/",
