--- a/PCM.SIP.ICP.SEG.Infraestructure/PCM.SIP.ICP.SEG.Infraestructure.csproj
+++ b/PCM.SIP.ICP.SEG.Infraestructure/PCM.SIP.ICP.SEG.Infraestructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Interface\PCM.SIP.ICP.SEG.Aplicacion.Interface.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.SEG.Transversal.Common\PCM.SIP.ICP.SEG.Transversal.Common.csproj" />
+  </ItemGroup>
+
 </Project>
