Feat: Implement Authenticate Endpoint

--- a/PCM.SIP.ICP.SEG.Api/appsettings.json
+++ b/PCM.SIP.ICP.SEG.Api/appsettings.json
@@ -12,8 +12,8 @@
   },
   "Config": {
     "OriginCors": "http://localhost:4200/",
-    "Secret": "+_)(*&^%$#@!)(JJGGG$$##+____*",
-    "Issuer": "SEIDOR.SGS.com",
-    "Audience": "SEIDOR.SGS.com"
+    "Secret": "+_)(*&^%$#@!)(JJGGG$$##+____*00??",
+    "Issuer": "gob.pe",
+    "Audience": "gob.pe"
   }
 }
