--- a/PCM.SIP.ICP.SEG.Aplicacion.Features/PCM.SIP.ICP.SEG.Aplicacion.Features.csproj
+++ b/PCM.SIP.ICP.SEG.Aplicacion.Features/PCM.SIP.ICP.SEG.Aplicacion.Features.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\PCM.SIP.ICP.SEG.Aplicacion.Validator\PCM.SIP.ICP.SEG.Aplicacion.Validator.csproj" />
     <ProjectReference Include="..\PCM.SIP.ICP.SEG.Domain\PCM.SIP.ICP.SEG.Domain.csproj" />
     <ProjectReference Include="..\PCM.SIP.ICP.SEG.Transversal.Common\PCM.SIP.ICP.SEG.Transversal.Common.csproj" />
+    <ProjectReference Include="..\PCM.SIP.ICP.Transversal.UtilWeb\PCM.SIP.ICP.Transversal.UtilWeb.csproj" />
     <ProjectReference Include="..\PCM.SIP.ICP.Transversal.Util\PCM.SIP.ICP.Transversal.Util.csproj" />
   </ItemGroup>
 
